<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:attrs="http://schemas.android.com/tools"
        android:background="@color/privacyMonitorBlueColor">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.08"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.75"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@mipmap/logo"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/lato_bold"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginTop="80dp"
                android:textColor="@color/welcomeScreenTextColor"
                android:text="@string/welcomeScreenTitlePage1"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/lato"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_marginTop="25dp"
                android:textColor="@color/welcomeScreenTextColor"
                android:text="@string/welcomeScreenDescriptionPage1"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/buttonGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.90"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextFinishButton"
            android:background="@drawable/welcome_rounded_button"
            style="@style/WelcomeButton"
            android:text="@string/welcomeButtonNext"
            android:layout_width="200dp"
            android:layout_height="46dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/buttonGuideline"/>

</androidx.constraintlayout.widget.ConstraintLayout>
